--- a/R/twitter_data.Rmd
+++ b/R/twitter_data.Rmd
@@ -3,6 +3,8 @@ title: '@jumping_uk Twitter Analysis'
 author: "David Saipe"
 date: '2022-07-06'
 output: html_document
+fig_width: 6
+fig_height: 4
 ---
 
 ```{r setup, include=FALSE}
@@ -19,7 +21,11 @@ library(tidytext)
 library(ggwordcloud)
 ```
 
-```{r jr timeline, echo = FALSE}
+## Introduction
+
+The @jumping_uk account has been active since March 2016 and has almost 8000 followers. The account is currently posting very regularly (most weekdays). The graph below shows how many tweets @jumping_uk have posted each year since joining twitter. 
+
+```{r jr timeline, echo = FALSE, }
 jr_timeline = read.csv("Data/jr_timeline.csv")
 
 jr_timeline %<>%
@@ -33,40 +39,13 @@ jr_timeline$status_id = gsub("x", "", as.character(jr_timeline$status_id))
 ggplot(jr_timeline, aes(year)) +
   geom_point(stat = "count") +
   geom_line(stat = "count") +
-  xlim(2017,2022) +
+  xlim(2017,2021) +
   theme_classic() +
   xlab("Year") +
   ylab("Number of Tweets")
-
-tweet_words = unnest_tokens(
-  tbl = jr_timeline,
-  output = word,
-  input = text
-)
-
-custom_stop_words = c("t.co", "https" , "0001f40d", "fe0f",
-                      "2728", "0001f389", "ukhkqhxhwg", "custom",
-                      "upcoming", "time", "newcastle", "jumping",
-                      "rivers", "north", "team", "amp", "check",
-                      "east", "csgillespie", "info", "read", "â",
-                      "mcmc_stan")
-tweet_words = anti_join(tweet_words, 
-                        stop_words, 
-                        by = "word")
-tweet_words %<>%
-  select(word)
-
-word_counts = count(tweet_words, word, sort = TRUE)
-word_counts = filter(word_counts,
-                     !(word %in% custom_stop_words))
-
-word_counts %>%
-  slice_max(n, n = 20) %>%
-  ggplot(aes(label = word, size = n)) + 
-  geom_text_wordcloud() +
-  scale_size_area(max_size = 10) +
-  theme_void()
 ```
+
+This report will look into several factors that affect levels of engagement on Twitter - including what day and time a tweet is posted, the use of hashtags and the use of media. I have used the RTweet package to get the data for this analyses, and have primarily been looking at data from the @jumping_uk timeline, as well as general tweets using the hashtag #rstats. 
 
 ```{r #rstats, include = FALSE}
 rstats = read.csv("Data/rstats_hashtag.csv")
@@ -77,6 +56,10 @@ rstats %<>%
          interactions = retweet_count + favorite_count,
          hour_posted = hour(created_at))
 ```
+
+## Best day of the week to post
+
+It is widely agreed upon that tweets posted on the weekend will receive less engagement from the users audience. @jumping_uk's timeline corroborates with this. Tweets posted on Saturdays and Sundays have generally received significantly less retweets and likes. 
 
 ```{r day of the week, echo = FALSE}
 by_weekday = jr_timeline %>%
@@ -112,13 +95,6 @@ avg_weekday %>%
 From looking at the @jumping_uk timeline, there are two average peaks in 
 engagement: one from 9-12am, and another from 3-6pm, as shown below. 
 
-Examining the locations of people retweeting @jumping_uk tweets, there is a 
-higher proportion of retweeters in the  afternoon peak that are from America, 
-with a lower proportion being from Asia and Africa. The proportion of retweeters
-from the UK remains similar throughout the day (just under 50%). It should also 
-be taken into account that around 75% of @rstatstweet followers are from America, 
-so tweets containing #rstats may receive more engagement in the afternoon.
-
 ```{r time posted, echo = FALSE}
 avg_interactions = jr_timeline %>%
   group_by(hour_posted) %>%
@@ -129,47 +105,58 @@ avg_interactions = avg_interactions[-c(1,2),]
 ggplot(avg_interactions, aes(hour_posted, avg_interactions)) +
   geom_bar(fill = "#d95f02",  color = "black",
            stat = "identity") +
-  labs(subtitle = "Tweets by @jumping_uk from 2016 to 2022") +
+  labs(caption = "Taken from @jumping_uk timeline from 2016 to 2022") +
   xlim(6,24) +
   xlab("Hour Posted") + 
   ylab("Average Number of Interactions") +
   theme_classic()
+```
 
+Examining the locations of people retweeting @jumping_uk tweets, there is a 
+higher proportion of retweeters in the  afternoon peak that are from America, 
+with a lower proportion being from Asia and Africa. The proportion of retweeters
+from the UK remains similar throughout the day (just under 50%).
+
+```{r retweeter locations, echo = FALSE}
 morning_retweeters = read.csv("Data/morning_retweeters.csv")
 morning_retweeters %<>%
   group_by(location) %>%
   mutate(count = n())
-#morning_retweeters = morning_retweeters[-c(38:57),]
 
 afternoon_retweeters = read.csv("Data/afternoon_retweeters.csv")
 afternoon_retweeters %<>%
   group_by(location) %>%
   mutate(count = n())
-#afternoon_retweeters = afternoon_retweeters[-c(41:71),]
 
 am = ggplot(morning_retweeters, 
        aes(x = "", y = count, fill = location)) +
   geom_bar(width = 1, stat = "identity") + 
   coord_polar("y", start = 0) +
   scale_fill_brewer(palette = "Dark2", name = "Continent") +
-  labs(subtitle = "Morning") +
+  labs(subtitle = "Morning peak: 9am - 12pm") +
   theme_void() +
-  theme(plot.subtitle = element_text(hjust = 0.5))
+  theme(plot.subtitle = element_text(hjust = 0.5),
+        legend.position = "none")
 
 pm = ggplot(afternoon_retweeters, 
        aes(x = "", y = count, fill = location)) +
   geom_bar(width = 1, stat = "identity") + 
   coord_polar("y", start = 0) +
   scale_fill_brewer(palette = "Dark2", name = "Continent") +
-  labs(subtitle = "Afternoon") +
+  labs(subtitle = "Afternoon peak: 3pm - 6pm") +
   theme_void() +
-  theme(legend.position = "none",
-        plot.subtitle = element_text(hjust = 0.5)) 
+  theme(plot.subtitle = element_text(hjust = 0.5)) 
 
-(am + pm) +
-  labs(title = "Locations of @jumping_uk retweeters") +
-  theme(plot.title = element_text(hjust = 1.4))
+am +
+  labs(title = "Location of @jumping_uk retweeters") + 
+  pm
+```
 
+It should also 
+be taken into account that around 75% of @rstatstweet followers are from America, 
+so tweets containing #rstats may receive more engagement in the afternoon.
+
+```{r rstats follower locations, echo = FALSE}
 rstats_followers = read.csv("Data/rstats_followers2.csv")
 rstats_followers = rstats_followers[1:216,]
 rstats_followers %<>%
@@ -182,7 +169,8 @@ ggplot(rstats_followers,
   geom_bar(width = 1, stat = "identity") + 
   coord_polar("y", start = 0) +
   scale_fill_brewer(palette = "Dark2", name = "Continent") +
-  labs(title = "Locations of @rstatstweet followers") +
+  labs(title = "Locations of @rstatstweet followers",
+       caption = "Based off a sample of 500 followers") +
   theme_void()
 ```
 
@@ -228,17 +216,7 @@ Below are the top 30 hashtags used alongside #rstats, taken from the most
 popular tweets containing #rstats (07/07 - 14/07). The impact of some of these 
 hashtags when used alongside #rstats are shown below. 
 
-@jumping_uk uses #rstats, #datascience, #python, #tidyverse and #shiny most often. 
-The bar chart below shows the impact of these four hashtags when used 
-alongside #rstats. @jumping_uk doesn't use #machinelearning and #bigdata as often 
-but the figure below above that these have a significant impact on engagement, 
-so could be used more often in the future. 
-
-There are also hashtag trends such as #100daysofcode and #tidytuesdays which 
-could be good ways to appear more on the RStats community timeline (there are 
-two accounts that retweet all tweets with #100daysofcode). 
-
-```{r hashtags, echo = FALSE}
+```{r hashtags wordcloud, echo = FALSE}
 rstats_top = rstats %>%
   filter(interactions >= 225)
 hashtag_count = unnest_tokens(tbl = rstats_top,
@@ -250,10 +228,15 @@ hashtag_count %>%
   ggplot(aes(label = word, size = n)) +
   geom_text_wordcloud() +
   scale_size_area(max_size = 10) +
-  labs(title = "Hashtags used alongside #rstats",
-       caption = "Taken from the top 100 most popular tweets containing #rstats") +
+  labs(caption = "Taken from the top 100 most popular tweets containing #rstats from 07/07 - 14/07") +
   theme_void()
+```
 
+@jumping_uk uses #datascience, #python, #tidyverse and #shiny most often. 
+The bar chart below shows the impact of these four hashtags when used 
+alongside #rstats.
+
+```{r jr hashtags, echo = FALSE}
 jr_hashtags = tibble(
   hashtags = c("shiny", "datascience", "python",
                "tidyverse"),
@@ -272,8 +255,8 @@ jr_hashtags %>%
   scale_fill_brewer(palette = "Dark2", 
                     name = "Hashtag Used",
                     labels = c("No", "Yes")) +
-  labs(title = "Effect of hashtags used alongside #rstats",
-       caption = "Taken from @jumping_uk timeline") +
+  labs(title = "Impact of hashtags used alongside #rstats",
+       caption = "Taken from @jumping_uk timeline from 2016 to 2022") +
   xlab("Hashtag") +
   ylab("Average Interactions") +
   theme_classic() +
@@ -281,7 +264,12 @@ jr_hashtags %>%
                                    size = 6,
                                    vjust = 0.7),
         plot.title = element_text(hjust = 0.3))
+```
 
+@jumping_uk doesn't use #machinelearning and #bigdata as often but the figure below shows that these have a significant impact on engagement, 
+and so they could be used more often in the future. 
+
+```{r rstats hashtags, echo = FALSE}
 rstats_hashtags = tibble(
   hashtags = c("stats", "datascience", "python", 
                "machinelearning", "bigdata"),
@@ -297,7 +285,8 @@ rstats_hashtags %>%
   scale_fill_brewer(palette = "Dark2", 
                     name = "Hashtag Used",
                     labels = c("No", "Yes")) +
-  labs(title = "Impact of hashtags commonly used with #rstats") +
+  labs(title = "Impact of hashtags used alongside #rstats",
+       caption = "Taken from #rstats tweets from 07/07 - 14/07") +
   xlab("Hashtag") +
   ylab("Average Interactions") +
   theme_classic() +
@@ -307,6 +296,10 @@ rstats_hashtags %>%
         plot.title = element_text(hjust = 0.5))
 
 ```
+
+There are also hashtag trends such as #100daysofcode and #tidytuesdays which 
+could be good ways to appear more on the RStats community timeline (there are 
+two accounts that retweet all tweets with #100daysofcode). 
 
 ```{r retweeters, echo = FALSE}
 retweeters = read.csv("Data/retweeters.csv")
